Updated forgotpassword pages

--- a/src/pages/forgotpassword/styles.module.css
+++ b/src/pages/forgotpassword/styles.module.css
@@ -20,14 +20,15 @@
 }
 .box1{
     place-content: center;
+    place-items: center;
     width: 50%;
     height: 80vh;
     background-color: var(--modal-white);
     border-radius: 40px;
+    padding: 0rem 7rem;
 }
 .box1 form{
-    width: 80%;
-    margin: 1rem 3rem;
+    margin: 0rem 4rem;
 }
 .box1 form .title{
     font-size: 40px;
@@ -60,6 +61,7 @@
     }
     .box1{
         width: 100%;
+        padding: 0rem 0rem;
     }
     .box1 form .title{
         font-size: 30px;
