--- a/src/components/landingPage/footer/style.module.css
+++ b/src/components/landingPage/footer/style.module.css
@@ -3,10 +3,10 @@
   padding: 0;
   margin: 0;
 }
-:root {
+/* :root {
   --footerbg: #132985;
   --footer-txt: #f4f4f4;
-}
+} */
 
 .container {
   background-color: #132985;
