--- a/src/pages/login/style.module.css
+++ b/src/pages/login/style.module.css
@@ -21,6 +21,7 @@
   font-style: normal;
   font-weight: 700;
   line-height: normal;
+  margin-bottom: 39px;
 }
 
 .label > input {
@@ -38,7 +39,7 @@
 .inputtext {
   background-color: #ececec;
   width: 100%;
-  word-wrap: break-word;
+  height: 50px;
 }
 
 .forgotpassword {
@@ -49,7 +50,7 @@
 
 .buttonsection {
   width: 100%;
-  height: 53px;
+  height: 50px;
   border-radius: 8px;
   display: inline-flex;
   background-color: #132985;
