--- a/src/pages/login/style.module.css
+++ b/src/pages/login/style.module.css
@@ -25,7 +25,6 @@
 }
 
 .label > input {
-  background-color: #ececec;
   display: flex;
   padding: 16px;
   flex-direction: column;
@@ -34,20 +33,43 @@
   gap: 4px;
   align-self: stretch;
   border-radius: 8px;
-}
-
-.inputtext {
   background-color: #ececec;
   width: 100%;
   height: 50px;
+  position: relative;
+}
+.hide {
+  display: flex;
+  background-color: #ececec;
+  align-items: center;
+  border-radius: 8px;
+}
+.hide > .inputtext {
+  padding: 16px;
+  outline: none;
+  width: 100%;
+  height: 50px;
+  background: transparent;
+}
+input:focus {
+  outline: none;
+}
+.hideicon {
+  margin: 1rem;
+  background-color: transparent;
 }
 
 .forgotpassword {
   color: #132985;
   text-align: end;
   padding-top: 1rem;
+  text-decoration: none;
+  transition: color 0.3s ease, text-decoration 0.3s ease;
 }
-
+.forgotpassword:hover {
+  color: #f4901f; /* Change color on hover */
+  text-decoration: underline; /* Add underline on hover */
+}
 .buttonsection {
   width: 100%;
   height: 50px;
