--- a/src/components/modal/styles.module.css
+++ b/src/components/modal/styles.module.css
@@ -14,11 +14,12 @@
 .modalContent {
     background: white;
     padding: 40px;
+    padding-top: 6rem;
     border-radius: 10px;
     display: grid;   
     place-items: center;
     width: 29%;
-    height: 380px;
+    height: 400px;
     position: absolute;
     top: 130px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -27,8 +28,9 @@
     color: var(--success);
     font-size: 24px;
     font-weight: 700;
-    line-height: 30px;
-    margin: 1rem 0rem;
+}
+.modalContent > p{
+  font-size: 11px;
 }
   .closeButton {
     position: absolute;
@@ -44,9 +46,8 @@
     display: grid;
     background-color: var(--success-btn);
     color: var(--modal-white);
-    padding: 0.7rem 8rem;
+    padding: 0.7rem 6rem;
     border-radius: 10px;
-    margin-top: 1rem;
   }
 
   @media (max-width:667px){
