--- a/src/components/landingPage/footer/styles.module.css
+++ b/src/components/landingPage/footer/styles.module.css
@@ -1,50 +1,84 @@
-* {
-  box-sizing: border-box;
-  padding: 0;
+*{
   margin: 0;
-}
-:root {
-  --footerbg: #132985;
-  --footer-txt: #f4f4f4;
-}
-
-.container {
-  background-color: #132985;
-  display: flex;
-  justify-content: space-around;
-  width: 100%;
-  height: 50vh;
-  padding-top: 3.75rem;
-}
-.head-section {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  color: #ffffff;
-}
-.mid-section {
-  color: #ffffff;
-  height: 50%;
-}
-.mid-section > h5 {
-  padding-left: 2.25rem;
-}
-.mid-section > ul > li {
-  list-style-type: none;
-}
-.last-section {
-  color: #ffffff;
-}
-.icon-section {
-  padding-top: 4.931rem;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
+  scroll-behavior: smooth;
 }
 
-/* .footer {
-  background-color: var(--footerbg);
-  color: var(--footer-txt);
+:root{
+  --background-color: #132985;
+  --text-black: #1E1E1E;
+  --modal-white: #F4F4F4;
+  --textfield-bg: #ECECEC;
+  --textfield-txt: #BFBFBF;
+  --textfield-eyecolor: #7C7B7B;
+  --success: #28B411;
+  --success-btn:#369926;
+  --datum-yellow: #F4901F;
+  --services-container: #D0D4E7;
 }
-.footer {
+
+.footer_container {  
+  background-color: var(--background-color); 
+}
+.footer{
   display: grid;
-  place-items: center;
+  color: var(--textfield-bg);
+  padding: 4rem 6rem;
   grid-template-columns: repeat(3, 1fr);
-} */
+  
+}
+.brand{
+  width: 35%;
+  margin-bottom: 2rem;
+}
+.footer .socials{
+  display: flex;
+  gap: 1rem;
+  margin-top: 2rem;
+  color: var(--services-container);
+}
+.footer_card > .card_title{
+  font-size: 22px;
+  font-weight: 600;
+  margin-bottom: 1rem;
+}
+.useful_links{
+  color: var(--services-container);
+}
+.useful_links > span{
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  margin-bottom: 1rem;
+}
+.copywright{
+  padding: 1.5rem 6rem;
+  color: var(--textfield-txt);
+  background-color: var(--background-color); 
+}
+
+@media (max-width: 667px){
+  .footer_container {    
+    background-color: var(--background-color); 
+  }
+  .footer{
+    padding: 2rem;
+    grid-template-columns: repeat(1, 1fr);
+    font-size: 14px;
+  }
+ 
+  .footer_card > .card_title{
+    font-size: 18px;
+    font-weight: 600;
+    margin-bottom: 0.3rem;
+    margin-top: 2rem;
+  }
+  .copywright{
+    padding: 2rem;
+    font-size: 12px;
+    text-align: center;
+  }
+}
