Completed About component

--- a/src/components/landingPage/about/styles.module.css
+++ b/src/components/landingPage/about/styles.module.css
@@ -20,16 +20,84 @@
     --services-container: #D0D4E7;
 }
 
-.services_container{    
+.about_container{    
     padding: 4rem 6rem;
-    background-color: var(--services-container);
 }
+.about_container > p{
+    font-size: 30px;
+    text-align: center;
+    font-weight: 700;
+    color: var(--background-color);
+}
+.whyus{
+    display: grid;
+    padding: 2rem 0rem;
+    gap: 1rem;
+    grid-template-columns: repeat(3, 1fr);
+}
+.whyuscard{
+    border-radius: 16px;
+    padding: 24px;
+    min-width: 30vh;
+    font-size: 14px;
+    background-color: var(--textfield-bg);
+}
+.whyuscard > h2{
+    font-size: 16px;
+    font-weight: 600;
+    margin-bottom: 1rem;
+}
+.aboutus{
+    display: flex;
+    align-items: center;
+    margin-top: 1rem;
+}
+.aboutusleft{
+    width: 50%;
+    font-size: 16px;
+    font-weight: 400;
+    padding-right: 7rem;
+}
+.aboutusleft > h2{
+    font-size: 30px;
+    font-weight: 700;
+    color: var(--background-color);
+    margin-bottom: 1rem;
+}
+.aboutusleft > button{
+    background-color: var(--datum-yellow);
+    color: var(--modal-white);
+    border-radius: 8px;
+    margin-top: 2rem;
+    padding: 0.5rem;
+    width: 30%;
+}
+.aboutusright{
+    padding: 2rem;
+}
+
 
 
 
 @media (max-width:667px){
     .about_container{
-        padding: 2rem 2rem;
+        padding: 2rem;
     }
-       
+    .whyus{
+        
+        gap: 1rem;
+        grid-template-columns: repeat(1, 1fr);
+    }  
+    .aboutus{
+        flex-direction: column-reverse;
+    }
+    .aboutusleft{
+        width: 100%;
+        font-size: 16px;
+        font-weight: 400;
+        padding-right: 0rem;
+    }
+    .aboutusright{
+        padding: 2rem;
+    }
 }
