--- a/src/components/landingPage/services/styles.module.css
+++ b/src/components/landingPage/services/styles.module.css
@@ -38,16 +38,24 @@
     grid-template-columns: repeat(3, 1fr);
 }
 .services_card{
+    display: grid;
+    place-items: center;
+    text-align: center;
     border-radius: 16px;
     padding: 24px;
     background-color: var(--textfield-bg);
 }
+.services_card > img{
+    width: 30%;
+}
 .services_card > h2{
-    font-size: 20px;
-    font-weight: 600;
+    font-size: 18px;
+    font-weight: 700;
     margin: 1rem 0rem;
 }
-
+.services_card > p{
+    font-size: 14px;
+}
 
 @media (max-width:667px){
     .services_container{
@@ -55,6 +63,12 @@
     }
     .services{
         grid-template-columns: repeat(1, 1fr);
+    }
+    .services_card{
+        font-size: 12px;
+    }
+    .services_card > img{
+        width: 20%;
     }
    
 }
