--- a/src/components/landingPage/footer/styles.module.css
+++ b/src/components/landingPage/footer/styles.module.css
@@ -26,7 +26,7 @@
 .footer{
   display: grid;
   color: var(--textfield-bg);
-  padding: 4rem 6rem;
+  padding: 2rem 6rem;
   grid-template-columns: repeat(3, 1fr);
   
 }
@@ -36,17 +36,18 @@
 }
 .footer .socials{
   display: flex;
-  gap: 1rem;
-  margin-top: 2rem;
+  gap: 0.5rem;
+  margin-top: 1rem;
   color: var(--services-container);
 }
 .footer_card > .card_title{
-  font-size: 22px;
-  font-weight: 600;
+  font-size: 14px;
+  font-weight: 400;
   margin-bottom: 1rem;
 }
 .useful_links{
-  color: var(--services-container);
+  font-size: 12px;
+  color: var(--textfield-txt);
 }
 .useful_links > span{
   display: flex;
@@ -57,6 +58,7 @@
 .copywright{
   padding: 1.5rem 6rem;
   color: var(--textfield-txt);
+  font-size: 10px;
   background-color: var(--background-color); 
 }
 
@@ -71,7 +73,7 @@
   }
  
   .footer_card > .card_title{
-    font-size: 18px;
+    font-size: 16px;
     font-weight: 600;
     margin-bottom: 0.3rem;
     margin-top: 2rem;
