--- a/src/components/landingPage/navbar/styles.module.css
+++ b/src/components/landingPage/navbar/styles.module.css
@@ -63,6 +63,7 @@ nav ul li a:hover{
         left: 0;
         right: 0;
         width: 100%;
+        bottom:0;
         align-items: center;
         padding: 1.5rem 0;
         background-color: var(--background-color);
