--- a/src/components/modal/styles.module.css
+++ b/src/components/modal/styles.module.css
@@ -13,41 +13,44 @@
 }
 .modalContent {
     background: white;
-    padding: 40px;
-    padding-top: 6rem;
+    padding: 20px;
+    padding-top: 3rem;
     border-radius: 10px;
     display: grid;   
     place-items: center;
-    width: 29%;
-    height: 400px;
+    width: 30%;
+    height: 230px;
     position: absolute;
-    top: 130px;
+    top: 120px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 } 
 .modalContent .title{
     color: var(--success);
-    font-size: 24px;
-    font-weight: 700;
+    font-size: 20px;
+    font-weight: 600;
 }
 .modalContent > p{
   font-size: 11px;
 }
   .closeButton {
     position: absolute;
-    top: 20px;
-    right: 20px;
+    top: 10px;
+    right: 10px;
     border: none;
     padding: 10px 20px;
     border-radius: 4px;
     cursor: pointer;
-    font-size: 16px;
+    width: 17%;
+    /* font-size: 16px; */
   }  
   .goback{
     display: grid;
     background-color: var(--success-btn);
     color: var(--modal-white);
-    padding: 0.7rem 6rem;
-    border-radius: 10px;
+    padding: 0.3rem 4rem;
+    border-radius: 8px;
+    margin-top: 0.5rem;
+    font-size: 12px;    
   }
 
   @media (max-width:667px){
