--- a/src/pages/forgotpassword3/styles.module.css
+++ b/src/pages/forgotpassword3/styles.module.css
@@ -33,20 +33,21 @@
     height: 80vh;
     background-color: var(--modal-white);
     border-radius: 40px;
-    padding: 0rem 7rem;
+    padding: 0rem 4rem;
 }
 .box1 form{
     width: 80%;
     margin: 1rem 3rem;   
 }
 .box1 form .title{
-    font-size: 40px;
+    font-size: 20px;
     font-weight: 700;
     color: var(--background-color);
     margin-bottom: 0.3rem;
 }
 .desc{
     margin-bottom: 2rem;
+    font-size: 12px;
 }
 
 .resend{
@@ -70,9 +71,9 @@
 .box1 form .textfield{    
     background-color: var(--textfield-bg);
     width: 100%;
-    height: 56px;
+    /* height: 56px; */
     border-radius: 8px;
-    padding: 16px;    
+    padding: 0.5rem 16px;    
 }
 .box1 form .textfield:focus{
     outline: none;
@@ -80,9 +81,10 @@
 .box1 form .sendbtn{
     background-color: var(--background-color);
     width: 100%;
-    height: 56px;
+    /* height: 56px; */
+    padding: 0.5rem 16px; 
     border-radius: 8px;
-    margin-top: 2rem;
+    margin-top: 1rem;
     color: var(--modal-white);
 }
 
