--- a/src/pages/login/style.module.css
+++ b/src/pages/login/style.module.css
@@ -28,7 +28,7 @@
 }
 .login_left {
   color: #1e1e1e;
-  background-color: #ececec;
+  background-color: #fafafa;
   height: 100vh;
   display: grid;
   place-items: center;
@@ -56,14 +56,14 @@
   gap: 4px;
   align-self: stretch;
   border-radius: 8px;
-  background-color: #bfbfbf;
+  background-color: #ececec;
   width: 100%;
   height: 50px;
   position: relative;
 }
 .hide {
   display: flex;
-  background-color: #bfbfbf;
+  background-color: #ececec;
   align-items: center;
   border-radius: 8px;
 }
