--- a/src/pages/students/viewResults/style.module.css
+++ b/src/pages/students/viewResults/style.module.css
@@ -5,3 +5,37 @@
   font-family: "Inter", sans-serif;
   font-optical-sizing: auto;
 }
+.container {
+  width: 100%;
+  height: 100vh;
+  overflow-y: scroll;
+}
+.info_card {
+  background-color: #f0f0f0;
+  padding: 15px;
+  border-radius: 5px;
+  width: 30%;
+  text-align: center;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+th,
+td {
+  padding: 10px;
+  border: 1px solid #ddd;
+  text-align: left;
+}
+th {
+  background-color: #f4f4f4;
+  font-weight: bold;
+
+  border-radius: 12px;
+}
+
+tr:nth-child(even) {
+  background-color: #f9f9f9;
+}
