--- a/src/pages/admin/addParents/style.module.css
+++ b/src/pages/admin/addParents/style.module.css
@@ -7,7 +7,7 @@
 }
 .label {
   /* margin-top: 24px;   */
-  width: 31.25rem;
+  width: 25rem;
 }
 
 .label label {
@@ -25,4 +25,9 @@
   width: 100%;
   height: 46px;
   position: relative;
+  border: 1px black solid;
+}
+.dropdown {
+  width: 25rem;
+  border: solid black 1px;
 }
