--- a/src/pages/admin/students/addParents/style.module.css
+++ b/src/pages/admin/students/addParents/style.module.css
@@ -5,8 +5,8 @@
   font-family: "Inter", sans-serif;
   font-optical-sizing: auto;
 }
-.label {
-  /* margin-top: 24px;   */
+/* .label {
+
   width: 25rem;
 }
 
@@ -30,4 +30,4 @@
 .dropdown {
   width: 25rem;
   border: solid black 1px;
-}
+} */
