added teacher dashboard

--- a/src/components/landingPage/hero/styles.module.css
+++ b/src/components/landingPage/hero/styles.module.css
@@ -74,6 +74,9 @@
   width: 100%;
   /* margin-bottom: rem; */
 }
+.hero_stripe{
+  width: 100%;
+}
 
 @media (max-width: 667px) {
   .hero_container {
