--- a/src/pages/teachers/dashboard/styles.module.css
+++ b/src/pages/teachers/dashboard/styles.module.css
@@ -70,9 +70,8 @@
 }
 .timeline_card{
     width: 100%;
-    min-height: 309px;
     border-radius: 10px;
-    padding: 2rem;
+    padding: 1rem 2rem;
     text-align: center;
     background-color: var(--pure-wite);
 }
